--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'assets/vendor/fontawesome-free/css/all.min.css' %}">
 
     <!-- Plugins CSS -->
-    <link rel="stylesheet" href="assets/vendor/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/vendor/animate/animate.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/vendor/magnific-popup/magnific-popup.min.css' %}">
     <!-- Link Swiper's CSS -->
@@ -98,7 +98,7 @@
                     <div class="header-left mr-md-4">
                         <a href="#" class="mobile-menu-toggle  w-icon-hamburger" aria-label="menu-toggle">
                         </a>
-                        <a href="demo1.html" class="logo ml-lg-0">
+                        <a href="{% url 'index' %}" class="logo ml-lg-0">
                             <img src="assets/images/logo.png" alt="logo" width="144" height="45" />
                         </a>
                         <form method="get" action="#"
@@ -901,82 +901,6 @@
                                     <li><a href="#">Term and Conditions</a></li>
                                 </ul>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer-middle">
-                    <div class="widget widget-category">
-                        <div class="category-box">
-                            <h6 class="category-name">Consumer Electric:</h6>
-                            <a href="#">TV Television</a>
-                            <a href="#">Air Condition</a>
-                            <a href="#">Refrigerator</a>
-                            <a href="#">Washing Machine</a>
-                            <a href="#">Audio Speaker</a>
-                            <a href="#">Security Camera</a>
-                            <a href="#">View All</a>
-                        </div>
-                        <div class="category-box">
-                            <h6 class="category-name">Clothing & Apparel:</h6>
-                            <a href="#">Men's T-shirt</a>
-                            <a href="#">Dresses</a>
-                            <a href="#">Men's Sneacker</a>
-                            <a href="#">Leather Backpack</a>
-                            <a href="#">Watches</a>
-                            <a href="#">Jeans</a>
-                            <a href="#">Sunglasses</a>
-                            <a href="#">Boots</a>
-                            <a href="#">Rayban</a>
-                            <a href="#">Acccessories</a>
-                        </div>
-                        <div class="category-box">
-                            <h6 class="category-name">Home, Garden & Kitchen:</h6>
-                            <a href="#">Sofa</a>
-                            <a href="#">Chair</a>
-                            <a href="#">Bed Room</a>
-                            <a href="#">Living Room</a>
-                            <a href="#">Cookware</a>
-                            <a href="#">Utensil</a>
-                            <a href="#">Blender</a>
-                            <a href="#">Garden Equipments</a>
-                            <a href="#">Decor</a>
-                            <a href="#">Library</a>
-                        </div>
-                        <div class="category-box">
-                            <h6 class="category-name">Health & Beauty:</h6>
-                            <a href="#">Skin Care</a>
-                            <a href="#">Body Shower</a>
-                            <a href="#">Makeup</a>
-                            <a href="#">Hair Care</a>
-                            <a href="#">Lipstick</a>
-                            <a href="#">Perfume</a>
-                            <a href="#">View all</a>
-                        </div>
-                        <div class="category-box">
-                            <h6 class="category-name">Jewelry & Watches:</h6>
-                            <a href="#">Necklace</a>
-                            <a href="#">Pendant</a>
-                            <a href="#">Diamond Ring</a>
-                            <a href="#">Silver Earing</a>
-                            <a href="#">Leather Watcher</a>
-                            <a href="#">Rolex</a>
-                            <a href="#">Gucci</a>
-                            <a href="#">Australian Opal</a>
-                            <a href="#">Ammolite</a>
-                            <a href="#">Sun Pyrite</a>
-                        </div>
-                        <div class="category-box">
-                            <h6 class="category-name">Computer & Technologies:</h6>
-                            <a href="#">Laptop</a>
-                            <a href="#">iMac</a>
-                            <a href="#">Smartphone</a>
-                            <a href="#">Tablet</a>
-                            <a href="#">Apple</a>
-                            <a href="#">Asus</a>
-                            <a href="#">Drone</a>
-                            <a href="#">Wireless Speaker</a>
-                            <a href="#">Game Controller</a>
-                            <a href="#">View all</a>
                         </div>
                     </div>
                 </div>
